--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
     <section>
       <article>
         <h2>Sample Blog</h2>
-        <p> I had lunch today with the execs at Google. I was overwhelmed by their demeanor but I felt respected at every point of our conversation.</p>
+        <p> I had lunch today with the execs at Google. I was overwhelmed by their demeanor but I felt respected at every point of our conversation. Money is money</p>
       </article>
     </section>
 
