--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 
   <body>
 
-    <nav>
+    <nav class="nav-wrapper">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
@@ -25,7 +25,7 @@
       </article>
     </section>
 
-    
+
 
   </body>
 
