Bloggy Updated with post section

--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
       <a href="contact.html">Contact</a>
       <a href="blog.html">MyBlog</a>
     </nav>
-    <h1> Bloggy</h1>
+    <h1 class="head-1"> Bloggy</h1>
     <h2> My Blog Post</h2>
 
     <section>
