--- a/index.html
+++ b/index.html
@@ -15,20 +15,26 @@
       <a href="contact.html">Contact</a>
       <a href="blog.html">MyBlog</a>
     </nav>
-    <h1> Bloggy</h1>
+    <h1 class="head-1"> BLOGGY</h1>
     <h2> My Blog Post</h2>
 
     <section>
       <article>
         <h2> What is Bloggy?</h2>
-        <p> Bloggy is a simple website for blogging. Really... that's it</p>
+        <p> Bloggy is a simple website for blogging. Really... that's it. It doesn't look like it at the moment but it will just give me a few hours, days maybe...</p>
       </article>
     </section>
 
     <section>
       <article>
-        <h2>Sample Blog</h2>
-        <p> I had lunch today with the execs at Google. I was overwhelmed by their demeanor but I felt respected at every point of our conversation.</p>
+        <h2>Latest Blog Post</h2>
+        <p> Watching Black Mirror and I have to admit I didn't know what it really was at first but now I'm really liking it. Shows what society is like in reality.</p>
+        <p><b>Side Note</b><br> Creating my blog site as I watch the show. Had to pause because I was trying to figure what was more suitable breaklines or new headings. Lol It must feel weird reading this right? No, biggie you'll understand this site soon enough. Welcome to Bloggy. Welcome to the start of my success. You get to read and see where it all started with good old fashioned html, css, javascript and my personal selection of programming languages(rust ftw).</p>
+      </article>
+
+      <article>
+        <h2><a href="post/BlackMirror.html">Black Mirror Season 1 Review(While Coding)</a></h2>
+
       </article>
     </section>
 
