--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
       <a href="contact.html">Contact</a>
       <a href="blog.html">MyBlog</a>
     </nav>
-    <h1> Bloggy</h1>
+    <h1 class="head-1"> Bloggy</h1>
     <h2> Help Bloggy</h2>
 
     <p> You can enquire about bloggy at the following numbers</p>
