--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Bloggy</title>
     <link rel="stylesheet" href="styles.css">
+
   </head>
 
   <body>
@@ -34,10 +35,19 @@
 
       <article>
         <h2><a href="post/BlackMirror.html">Black Mirror Season 1 Review(While Coding)</a></h2>
+        <time><b>10:43</b><time>
+
+        <div class="more">
+          <p><b>Side Note</b><br>Okay so quick update. It's still the same night of the blog
+            probably about 20 minutes after. Had to make a slight adjustment
+            to the site. I need to figure out how to I want to manage my blogs
+            as well as formatting. This will be fun yay(sarcasm).<a href="post/BlackMirror.html">Read More</a></p>
+
 
       </article>
     </section>
-
+    <!--JavaScript at end of body for optimized loading-->
+          <script type="text/javascript" src="js/materialize.min.js"></script>
   </body>
 
 </html>
