--- a/index.html
+++ b/index.html
@@ -3,38 +3,41 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bloggy</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
   </head>
 
   <body>
 
-    <nav class="nav-wrapper">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-      <a href="blog.html">MyBlog</a>
+    <nav class="navbar navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Zv</a>
+      <a class="nav-link active" href="index.html">Home</a>
+      <a class="nav-link" href="about.html">About</a>
+      <a class="nav-link" href="contact.html">Contact</a>
+      <a class="nav-link" href="blog.html">MyBlog</a>
     </nav>
-    <h1 class="head-1"> BLOGGY</h1>
-    <h2> My Blog Post</h2>
+    <h1 class="head-1 display-2"> BLOGGY</h1>
+    <h2 class="display-4"> My Blog Post</h2>
 
     <section>
-      <article>
-        <h2> What is Bloggy?</h2>
+      <article class="container shadow p-3 mb-5 bg-white rounded">
+        <h2 class="display-4"> What is Bloggy?</h2>
         <p> Bloggy is a simple website for blogging. Really... that's it. It doesn't look like it at the moment but it will just give me a few hours, days maybe...</p>
       </article>
     </section>
 
     <section>
-      <article>
-        <h2>Latest Blog Post</h2>
+      <article class="container shadow p-3 mb-5 bg-white rounded">
+        <h2 class="display-4">Latest Blog Post</h2>
         <p> Watching Black Mirror and I have to admit I didn't know what it really was at first but now I'm really liking it. Shows what society is like in reality.</p>
         <p><b>Side Note</b><br> Creating my blog site as I watch the show. Had to pause because I was trying to figure what was more suitable breaklines or new headings. Lol It must feel weird reading this right? No, biggie you'll understand this site soon enough. Welcome to Bloggy. Welcome to the start of my success. You get to read and see where it all started with good old fashioned html, css, javascript and my personal selection of programming languages(rust ftw).</p>
       </article>
 
-      <article>
-        <h2><a href="post/BlackMirror.html">Black Mirror Season 1 Review(While Coding)</a></h2>
+      <article class="container shadow p-3 mb-5 bg-white rounded">
+        <h2 class="dispay-4"><a href="post/BlackMirror.html">Black Mirror Season 1 Review(While Coding)</a></h2>
         <time><b>10:43</b><time>
 
         <div class="more">
