--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section>
       <article class="container shadow p-3 mb-5 bg-white rounded">
-        <h2 class="display-4"> What is Bloggy?</h2>
+        <h2 class="lead"> What is Bloggy?</h2>
         <p> Bloggy is a simple website for blogging. Really... that's it. It doesn't look like it at the moment but it will just give me a few hours, days maybe...</p>
       </article>
     </section>
