--- a/blog.html
+++ b/blog.html
@@ -5,24 +5,52 @@
     <meta charset="utf-8">
     <title>Bloggy</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
   </head>
 
   <body>
 
-    <nav class="nav-wrapper">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-      <a href="blog.html">MyBlog</a>
+    <nav class="navbar navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Zv</a>
+      <a class="nav-link active" href="index.html">Home</a>
+      <a class="nav-link" href="about.html">About</a>
+      <a class="nav-link" href="contact.html">Contact</a>
+      <a class="nav-link" href="blog.html">MyBlog</a>
     </nav>
-    <h1 class="head-1"> Bloggy</h1>
-    <h2> My Blog Post</h2>
+    <h1 class="head-1 display-2"> BLOGGY</h1>
+    <h2 class="display-4"> Blogs</h2>
+
+    <hr>
+
+
 
     <section>
-      <article>
-        <h2>Sample Blog</h2>
-        <p> I had lunch today with the execs at Google. I was overwhelmed by their demeanor but I felt respected at every point of our conversation. Money is money</p>
+
+      <article class="container shadow p-3 mb-5 bg-white rounded">
+        <h2 class="dispay-4"><a href="post/BlackMirror.html">Black Mirror Season 1 Review(While Coding)</a></h2>
+          <hr>
+        <time><b>10:43</b><time>
+
+        <div class="more">
+          <p><b>Side Note</b><br>Okay so quick update. It's still the same night of the blog
+            probably about 20 minutes after. Had to make a slight adjustment
+            to the site. I need to figure out how to I want to manage my blogs
+            as well as formatting. This will be fun yay(sarcasm).<a href="post/BlackMirror.html">Read More</a></p>
+
       </article>
+      <hr>
+      <hr>
+
+      <article class="container shadow p-3 mb-5 bg-white rounded">
+        <h2 class="dispay-4"><a href="post/BloggyUpdate.html">BloggyUpdate(While Watching Crypt Videos)</a></h2>
+        <hr>
+        <time><b>1:05</b><time>
+          <p><b>Side Note</b><br> While writing this I'm very sleepy so let's see how many
+            words I can write before giving in to sleep.<a href="post/BloggyUpdate.html">Read More</a></p>
+
+      </article>
+
     </section>
 
   </body>
