--- a/contact.html
+++ b/contact.html
@@ -5,18 +5,22 @@
     <meta charset="utf-8">
     <title>Bloggy</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
   </head>
 
   <body>
 
-    <nav class="nav-wrapper">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-      <a href="blog.html">MyBlog</a>
+    <nav class="navbar navbar-dark bg-dark">
+      <a class="navbar-brand" href="#">Zv</a>
+      <a class="nav-link active" href="index.html">Home</a>
+      <a class="nav-link" href="about.html">About</a>
+      <a class="nav-link" href="contact.html">Contact</a>
+      <a class="nav-link" href="blog.html">MyBlog</a>
     </nav>
-    <h1 class="head-1"> Bloggy</h1>
-    <h2> Help Bloggy</h2>
+    <h1 class="head-1 display-2"> BLOGGY</h1>
+    <h2 class="display-4"> My Blog Post</h2>
+
 
     <p> You can enquire about bloggy at the following numbers</p>
 
