--- a/blog.html
+++ b/blog.html
@@ -51,6 +51,14 @@
 
       </article>
 
+      <article class="container shadow p-3 mb-5 bg-white rounded">
+        <h2 class="dispay-4"><a href="post/Haxe.html">HaxeFascination(While Watching Suits/Learning Haxe)</a></h2>
+        <hr>
+        <time><b>12:33</b><time>
+          <p><b>Side Note</b><br>This is a precursor to another blog I'm supposed to write tomorrow. I delibrately omit dates and use only times so no one ever really knows when I actually write them.<a href="post/Haxe.html">Read More</a> </p>
+
+      </article>
+
     </section>
 
   </body>
