--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@
       </article>
 
       <article class="container shadow p-3 mb-5 bg-white rounded">
-        <h2 class="dispay-4"><a href="post/BloggyUpdate.html">Ne Ne Eats( Coding While Coding)</a></h2>
+        <h2 class="dispay-4"><a href="post/Ne-Ne Eats.html">Ne Ne Eats( Coding While Coding)</a></h2>
         <hr>
         <time><b>4:58</b><time>
         <p><b>Side Note</b><br>It's been a while but in actuality to you who are reading this it might have fet just like a moment or two. I got caught in some work and life for me has inda flipped on its axis but I digress.<a href="post/Ne-Ne Eats.html">Read More</a></p>
